# trabalho-1-IA

./: CMakeLists.txt  README.md
include/: matrix.h  queue.h  stack.h  util.h
include/data_struct/: common.h  queue.h  stack.h
src/: main.c  matrix.c  queue.c  stack.c  util.c
src/data_struct/: queue.c  stack.c
